--- a/Output/Discapacidad-en-Mexico.html
+++ b/Output/Discapacidad-en-Mexico.html
@@ -1723,12 +1723,34 @@ discapacidad.</p>
 <strong>Censo 2020</strong> incluyó seis preguntas clave sobre
 <strong>dificultades funcionales</strong> en:</p>
 <ol style="list-style-type: decimal">
-<li><strong>Ver</strong> (aun usando lentes).</li>
-<li><strong>Oír</strong> (aun con aparato auditivo).</li>
-<li><strong>Caminar o subir escaleras</strong>.</li>
-<li><strong>Recordar o concentrarse</strong>.</li>
-<li><strong>Cuidar su propio aseo personal</strong>.</li>
-<li><strong>Comunicar y entender lo que otros dicen</strong>.</li>
+<li><p><strong>Ver:</strong> Abarca la pérdida total de la vista en uno
+o ambos ojos, así como a los débiles visuales y a los que aun usando
+lentes no pueden ver bien por lo avanzado de sus problemas
+visuales.</p></li>
+<li><p><strong>Oír:</strong> Incluye a las personas que no pueden oír,
+así como aquellas que presentan dificultad para escuchar (debilidad
+auditiva), en uno o ambos oídos, a las que aun usando aparato auditivo
+tiene dificultad para escuchar debido a lo avanzado de su
+problema.</p></li>
+<li><p><strong>Caminar, subir o bajar</strong>. Hace referencia a la
+dificultad de una persona para moverse, caminar, desplazarse o subir
+escaleras debido a la falta de toda o una parte de sus piernas; incluye
+también a quienes teniendo sus piernas no tienen movimiento o presentan
+restricciones para moverse, de tal forma que necesitan ayuda de otras
+personas, silla de ruedas u otro aparato, como andadera o pierna
+artificial.</p></li>
+<li><p><strong>Recordar o concentrarse</strong>. Incluye las
+limitaciones o dificultades para aprender una nueva tarea o para poner
+atención por determinado tiempo, así como limitaciones para recordar
+información o actividades que se deben realizar en la vida
+cotidiana.</p></li>
+<li><p><strong>Dificultad para bañarse, vestirse o comer.</strong> Son
+los problemas que tiene una persona para desarrollar tareas del cuidado
+personal o cuidar su salud.</p></li>
+<li><p><strong>Hablar o comunicarse</strong>. Hace referencia a los
+problemas para comunicarse con los demás, debido a limitaciones para
+hablar o porque no pueden platicar o conversar de forma
+comprensible.</p></li>
 </ol>
 <p>Estas preguntas permiten <strong>comparaciones
 internacionales</strong> y proporcionan una mejor medición de la
