Datos sobre la discapacidad en México

--- a/Output/Discapacidad-en-Mexico.html
+++ b/Output/Discapacidad-en-Mexico.html
@@ -1758,6 +1758,11 @@ discapacidad en términos de <strong>grados de dificultad</strong>,
 ayudando a mejorar políticas públicas de inclusión y accesibilidad.</p>
 </div>
 </div>
+<div id="referencias" class="section level2">
+<h2>Referencias</h2>
+<p>Instituto Nacional de Estadística y Geografía [INEGI], 2017, La
+discapacidad en México, datos al 2014. Versión 2017, disponible en <a href="https://www.inegi.org.mx/contenidos/productos/prod_serv/contenidos/espanol/bvinegi/productos/nueva_estruc/702825094409.pdf" class="uri">https://www.inegi.org.mx/contenidos/productos/prod_serv/contenidos/espanol/bvinegi/productos/nueva_estruc/702825094409.pdf</a></p>
+</div>
 
 
 
