--- a/Output/ENADID-2023_Discapacidad-en-Mèxico.html
+++ b/Output/ENADID-2023_Discapacidad-en-Mèxico.html
@@ -2386,7 +2386,7 @@ más significativa en instituciones privadas (5.6%).</p>
   
   <table class="gt_table" style="-webkit-font-smoothing: antialiased; -moz-osx-font-smoothing: grayscale; font-family: &#39;Century Gothic&#39;; display: table; border-collapse: collapse; line-height: normal; margin-left: auto; margin-right: auto; color: #333333; font-size: 10px; font-weight: normal; font-style: normal; background-color: #FFFFFF; border-top-style: solid; border-top-width: 2px; border-top-color: #A8A8A8; border-right-style: none; border-right-width: 2px; border-right-color: #D3D3D3; border-bottom-style: solid; border-bottom-width: 2px; border-bottom-color: #A8A8A8; border-left-style: none; border-left-width: 2px; border-left-color: #D3D3D3; table-layout: fixed; width: 0px;" data-quarto-disable-processing="false" data-quarto-bootstrap="false" width="0" bgcolor="#FFFFFF">
   <colgroup>
-    <col style="width:300px;">
+    <col style="width:200px;">
     <col style="width:100px;">
     <col style="width:100px;">
     <col style="width:100px;">
@@ -2503,11 +2503,11 @@ contraste con el 3.2% de la población sin discapacidad. Es importante
 señalar que el nivel predominante tanto en mujeres (20.3%) como en
 hombres (20.1%) con discapacidad correspondió a la primaria
 incompleta.</p>
-<div id="nhtcztzqdd" style="padding-left:0px;padding-right:0px;padding-top:10px;padding-bottom:10px;overflow-x:auto;overflow-y:auto;width:auto;height:auto;">
+<div id="jtsrqganht" style="padding-left:0px;padding-right:0px;padding-top:10px;padding-bottom:10px;overflow-x:auto;overflow-y:auto;width:auto;height:auto;">
   
   <table class="gt_table" style="-webkit-font-smoothing: antialiased; -moz-osx-font-smoothing: grayscale; font-family: &#39;Century Gothic&#39;; display: table; border-collapse: collapse; line-height: normal; margin-left: auto; margin-right: auto; color: #333333; font-size: 10px; font-weight: normal; font-style: normal; background-color: #FFFFFF; border-top-style: solid; border-top-width: 2px; border-top-color: #A8A8A8; border-right-style: none; border-right-width: 2px; border-right-color: #D3D3D3; border-bottom-style: solid; border-bottom-width: 2px; border-bottom-color: #A8A8A8; border-left-style: none; border-left-width: 2px; border-left-color: #D3D3D3; table-layout: fixed; width: 0px;" data-quarto-disable-processing="false" data-quarto-bootstrap="false" width="0" bgcolor="#FFFFFF">
   <colgroup>
-    <col style="width:300px;">
+    <col style="width:200px;">
     <col style="width:100px;">
     <col style="width:100px;">
     <col style="width:100px;">
